--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <div class="grid-item"><app-pie-chart></app-pie-chart></div>
+  <div class="pie"><app-pie-chart [data]="cases"></app-pie-chart></div>
   <div class="grid-item"><app-dynamic-chart></app-dynamic-chart></div>
   <div class="grid-item"><app-pie-chart></app-pie-chart></div>
   <div class="grid-item">7</div>
@@ -9,5 +9,4 @@
   <div class="grid-item">8</div>
   <div class="grid-item">9</div>
 </div>
-
-<div class="grid-item"><app-line-chart></app-line-chart></div>
+<app-pie-chart [data]="cases"></app-pie-chart>
