--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,12 +1,113 @@
 <div class="grid-container">
-  <div class="pie"><app-pie-chart [data]="cases"></app-pie-chart></div>
-  <div class="grid-item"><app-dynamic-chart></app-dynamic-chart></div>
-  <div class="grid-item"><app-pie-chart></app-pie-chart></div>
-  <div class="grid-item">7</div>
-  <div class="grid-item"><app-dynamic-chart></app-dynamic-chart></div>
-  <div class="grid-item"><app-dynamic-chart></app-dynamic-chart></div>
-  <div class="grid-item"><app-line-chart></app-line-chart></div>
-  <div class="grid-item">8</div>
-  <div class="grid-item">9</div>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        Chart 1
+        <button
+          mat-icon-button
+          class="more-button"
+          [matMenuTriggerFor]="menu"
+          aria-label="Toggle menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu" xPosition="before">
+          <button mat-menu-item (click)="expand()">Expand</button>
+          <button mat-menu-item (click)="remove()">Remove</button>
+        </mat-menu>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <app-pie-chart [data]="cases"></app-pie-chart>
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="line-chart">
+    <mat-card-header>
+      <mat-card-title>
+        Chart 2
+        <button
+          mat-icon-button
+          class="more-button"
+          [matMenuTriggerFor]="menu"
+          aria-label="Toggle menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu" xPosition="before">
+          <button mat-menu-item (click)="expand()">Expand</button>
+          <button mat-menu-item (click)="remove()">Remove</button>
+        </mat-menu>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <app-line-chart></app-line-chart>
+    </mat-card-content>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        Chart 3
+        <button
+          mat-icon-button
+          class="more-button"
+          [matMenuTriggerFor]="menu"
+          aria-label="Toggle menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu" xPosition="before">
+          <button mat-menu-item (click)="expand()">Expand</button>
+          <button mat-menu-item (click)="remove()">Remove</button>
+        </mat-menu>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <app-dynamic-chart type="line"></app-dynamic-chart>
+    </mat-card-content>
+  </mat-card>
+  <app-material-card></app-material-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        Chart 4
+        <button
+          mat-icon-button
+          class="more-button"
+          [matMenuTriggerFor]="menu"
+          aria-label="Toggle menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu" xPosition="before">
+          <button mat-menu-item (click)="expand()">Expand</button>
+          <button mat-menu-item (click)="remove()">Remove</button>
+        </mat-menu>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <app-dynamic-chart type="bar"></app-dynamic-chart>
+    </mat-card-content>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        Chart 5
+        <button
+          mat-icon-button
+          class="more-button"
+          [matMenuTriggerFor]="menu"
+          aria-label="Toggle menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu" xPosition="before">
+          <button mat-menu-item (click)="expand()">Expand</button>
+          <button mat-menu-item (click)="remove()">Remove</button>
+        </mat-menu>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <app-bar-chart></app-bar-chart>
+    </mat-card-content>
+  </mat-card>
 </div>
-<app-pie-chart [data]="cases"></app-pie-chart>
